--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
 <div class="container">
+    <div>
+        预测：
+        {volist name="forecast" id="vo"}
+        <span>{$vo}</span>
+        {/volist}
+    </div>
     <table class="table">
         <thead>
         <tr>
